# faas_memez_poopy

./: README.md  poopy.yml
poopy/: handler.py  pyproject.toml
